# vs-tabletop

./: .dockerignore  .env.example  .gitignore  Dockerfile  Game 1 Lab Manual.docx  Game 3 Lab Manual.docx  Game 4 Lab Manual.docx  Game 5 Lab Manual.docx  MANIFEST.in  Procfile  README.md  SECURITY.md  SECURITY_NOTES.md  docker-compose.yml  key.json  lab_manuals  requirements.txt  setup.py  simulated_image_game4.mat
vstabletop/: __init__.py  app.py  auth_clerk.py  config.py  fake_data_generator.py  forms.py  info.py  models.py  myDB.db  paths.py  pyproject.toml  questions.py  routes_game1.py  routes_game2.py  routes_game3.py  routes_game4.py  routes_game5.py  routes_game6.py  routes_game7.py  routes_game8.py  routes_games.py  routes_main.py  routes_scan.py  simulated_image_game4.mat  utils.py
vstabletop/games/: __init__.py  routes_game1.py  routes_game2.py  routes_game3.py  routes_game4.py  routes_game5.py  routes_game6.py  routes_game7.py  routes_game8.py
vstabletop/main/: __init__.py  app.py  events_calibration.py  routes_main.py  routes_scan.py
vstabletop/static/: calibration.js  confetti.js  eyeplot.js  game.js  game1.js  game2.js  game3.js  game4.js  game5.js  game6.js  game7.js  game8.js  index.js  scan.js  slicer.js
vstabletop/static/data/: bw.mat  game4_phantom.mat
vstabletop/static/styles/: style.css  style_game1.css  style_game2.css  style_game5.css  style_game7.css
vstabletop/templates/: base.html  calibration.html  game1.html  game2.html  game3.html  game4.html  game5.html  game6.html  game7.html  game8.html  index.html  scan.html
vstabletop/templates/games/: game1.html  game2.html  game3.html  (+5 more)
vstabletop/workers/: 3D_models_worker.py  game1_worker.py  game2_worker.py  game3_worker.py  game4_worker.py  game5_worker.py  game6_worker.py  game7_worker.py  game8_worker.py  phantom_worker.py
(+107 files in other folders)
